// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputField should render correctly 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:hover,
.css-1ehejze:focus {
  border-color: #792dd4;
}

.css-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.css-1ehejze::-moz-placeholder {
  opacity: 1;
}

.css-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.css-1ehejze::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form>
    <div>
      <div
        class="css-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="css-1ehejze el3h3g92"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="css-1lt3r2p e5hc7t70"
      >
        <div
          class="css-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly disabled 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-m8eos7 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-m8eos7::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-m8eos7::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-m8eos7:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-m8eos7::placeholder {
  color: #727683;
  opacity: 0;
}

.css-m8eos7:hover,
.css-m8eos7:focus {
  border-color: #792dd4;
}

.css-m8eos7:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-m8eos7::-webkit-input-placeholder {
  opacity: 1;
}

.css-m8eos7::-moz-placeholder {
  opacity: 1;
}

.css-m8eos7:-ms-input-placeholder {
  opacity: 1;
}

.css-m8eos7::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form>
    <div>
      <div
        class="css-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="css-m8eos7 el3h3g92"
          disabled=""
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="css-1lt3r2p e5hc7t70"
      >
        <div
          class="css-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly generated 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:hover,
.css-1ehejze:focus {
  border-color: #792dd4;
}

.css-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.css-1ehejze::-moz-placeholder {
  opacity: 1;
}

.css-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.css-1ehejze::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form>
    <div>
      <div
        class="css-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="css-1ehejze el3h3g92"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="css-1lt3r2p e5hc7t70"
      >
        <div
          class="css-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly id 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:hover,
.css-1ehejze:focus {
  border-color: #792dd4;
}

.css-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.css-1ehejze::-moz-placeholder {
  opacity: 1;
}

.css-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.css-1ehejze::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form>
    <div>
      <div
        class="css-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="css-1ehejze el3h3g92"
          id="id"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="css-1lt3r2p e5hc7t70"
      >
        <div
          class="css-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly notice 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:hover,
.css-1ehejze:focus {
  border-color: #792dd4;
}

.css-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.css-1ehejze::-moz-placeholder {
  opacity: 1;
}

.css-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.css-1ehejze::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.css-195y9p7 {
  color: #727683;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  margin-top: 4px;
}

.css-49hdbo-sizeStyles {
  vertical-align: middle;
  fill: #727683;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-49hdbo-sizeStyles .fillStroke {
  stroke: #727683;
  fill: none;
}

<form>
    <div>
      <div
        class="css-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="css-1ehejze el3h3g92"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="css-1lt3r2p e5hc7t70"
      >
        <div
          class="css-xbtm7g el3h3g94"
        />
      </div>
      <span
        class="el3h3g93 e19pqvs30 css-195y9p7 e13y3mga0"
      >
        <svg
          class="css-49hdbo-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M8.0001 2.8001C5.12822 2.8001 2.8001 5.12822 2.8001 8.0001C2.8001 10.872 5.12822 13.2001 8.0001 13.2001C10.872 13.2001 13.2001 10.872 13.2001 8.0001C13.2001 5.12822 10.872 2.8001 8.0001 2.8001ZM1.6001 8.0001C1.6001 4.46548 4.46548 1.6001 8.0001 1.6001C11.5347 1.6001 14.4001 4.46548 14.4001 8.0001C14.4001 11.5347 11.5347 14.4001 8.0001 14.4001C4.46548 14.4001 1.6001 11.5347 1.6001 8.0001ZM7.4001 5.58343C7.4001 5.25206 7.66873 4.98343 8.0001 4.98343H8.00493C8.3363 4.98343 8.60493 5.25206 8.60493 5.58343V5.58826C8.60493 5.91964 8.3363 6.18826 8.00493 6.18826H8.0001C7.66873 6.18826 7.4001 5.91964 7.4001 5.58826V5.58343ZM7.59538 8.11176C7.34868 8.14437 7.09765 8.02017 6.98011 7.78509C6.83191 7.48871 6.95205 7.1283 7.24844 6.98011L7.27517 6.96674C8.10301 6.55282 9.03512 7.30054 8.81064 8.19845L8.40481 9.82177C8.65152 9.78916 8.90254 9.91336 9.02008 10.1484C9.16828 10.4448 9.04815 10.8052 8.75177 10.9534L8.72503 10.9668L8.72502 10.9668C7.89719 11.3807 6.96507 10.633 7.18955 9.73508L7.59538 8.11176Z"
            fill-rule="evenodd"
          />
        </svg>
        notice
      </span>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly random 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:hover,
.css-1ehejze:focus {
  border-color: #792dd4;
}

.css-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.css-1ehejze::-moz-placeholder {
  opacity: 1;
}

.css-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.css-1ehejze::placeholder {
  opacity: 1;
}

.css-16eoe1d-StyledRightElement {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #727683;
  pointer-events: auto;
}

.css-16eoe1d-StyledRightElement:hover,
.css-16eoe1d-StyledRightElement:focus-within {
  color: #3f4250;
}

.css-16eoe1d-StyledRightElement>button {
  box-shadow: none!important;
}

.css-1amzdlq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 24px;
}

.css-1ovv447 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1ovv447:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ovv447:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1ovv447:hover,
.css-1ovv447:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form>
    <div>
      <div
        class="css-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="css-1ehejze el3h3g92"
          name="test"
          type="text"
          value=""
        />
        <div
          class="css-16eoe1d-StyledRightElement el3h3g97"
        >
          <div
            class="css-1amzdlq el3h3g91"
          >
            <button
              aria-label="randomize"
              class="css-1ovv447 e112qvla0"
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.7292 3.96253L14.0672 3.23096L14.7984 2.89278C15.0674 2.76855 15.0674 2.38896 14.7984 2.26473L14.0672 1.92655L13.7292 1.20187C13.605 0.932709 13.2256 0.932709 13.1014 1.20187L12.7634 1.93345L12.0391 2.27163C11.7701 2.39586 11.7701 2.77545 12.0391 2.89968L12.7703 3.23786L13.1083 3.96253C13.2256 4.2317 13.6119 4.2317 13.7292 3.96253Z"
                />
                <path
                  d="M5.79617 3.96253L6.13418 3.23096L6.8654 2.89278C7.13443 2.76855 7.13443 2.38896 6.8654 2.26473L6.13418 1.93345L5.79617 1.20187C5.6789 0.932709 5.2926 0.932709 5.17533 1.20187L4.83731 1.93345L4.1061 2.27163C3.83707 2.39586 3.83707 2.77545 4.1061 2.89968L4.83731 3.23786L5.17533 3.96253C5.2926 4.2317 5.6789 4.2317 5.79617 3.96253Z"
                />
                <path
                  d="M13.1083 9.13813L12.7703 9.8697L12.0391 10.2079C11.7701 10.3321 11.7701 10.7117 12.0391 10.8359L12.7703 11.1741L13.1083 11.9057C13.2325 12.1749 13.6119 12.1749 13.7361 11.9057L14.0741 11.1741L14.7984 10.829C15.0674 10.7048 15.0674 10.3252 14.7984 10.201L14.0672 9.8628L13.7292 9.13122C13.6119 8.86896 13.2256 8.86896 13.1083 9.13813Z"
                />
                <path
                  d="M11.8389 6.115L9.88667 4.16183C9.61763 3.89267 9.18305 3.89267 8.91401 4.16183L1.20177 11.871C0.932742 12.1401 0.932742 12.5749 1.20177 12.8441L3.15398 14.7973C3.42301 15.0664 3.8576 15.0664 4.12663 14.7973L11.832 7.08813C12.1079 6.82587 12.1079 6.38417 11.8389 6.115ZM9.42448 7.55745L8.45183 6.58431L9.40379 5.63189L10.3764 6.60502L9.42448 7.55745Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="css-1lt3r2p e5hc7t70"
      >
        <div
          class="css-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly required 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-2i7sd1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: calc(1 * 32px);
}

.css-2i7sd1::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-2i7sd1::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-2i7sd1:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-2i7sd1::placeholder {
  color: #727683;
  opacity: 0;
}

.css-2i7sd1:hover,
.css-2i7sd1:focus {
  border-color: #792dd4;
}

.css-2i7sd1:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-2i7sd1::-webkit-input-placeholder {
  opacity: 1;
}

.css-2i7sd1::-moz-placeholder {
  opacity: 1;
}

.css-2i7sd1:-ms-input-placeholder {
  opacity: 1;
}

.css-2i7sd1::placeholder {
  opacity: 1;
}

.css-61s40w-StyledRightElement {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #727683;
}

.css-61s40w-StyledRightElement:hover,
.css-61s40w-StyledRightElement:focus-within {
  color: #3f4250;
}

.css-11hy3ah-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.css-11hy3ah-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form>
    <div>
      <div
        class="css-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="css-2i7sd1 el3h3g92"
          name="test"
          required=""
          type="text"
          value=""
        />
        <div
          class="css-61s40w-StyledRightElement el3h3g97"
        >
          <svg
            class="css-11hy3ah-sizeStyles e1gt4cfo0"
            viewBox=" 0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-1lt3r2p e5hc7t70"
      >
        <div
          class="css-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly with minLength 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-18ddxdy {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  border-color: #b3144d;
}

.css-18ddxdy::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-18ddxdy::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-18ddxdy:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-18ddxdy::placeholder {
  color: #727683;
  opacity: 0;
}

.css-18ddxdy:hover,
.css-18ddxdy:focus {
  border-color: #792dd4;
}

.css-18ddxdy:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-18ddxdy::-webkit-input-placeholder {
  opacity: 1;
}

.css-18ddxdy::-moz-placeholder {
  opacity: 1;
}

.css-18ddxdy:-ms-input-placeholder {
  opacity: 1;
}

.css-18ddxdy::placeholder {
  opacity: 1;
}

.css-18ddxdy:hover,
.css-18ddxdy:focus {
  border-color: #92103f;
}

.css-18ddxdy:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
  border-color: #92103f;
}

.css-2yjbay {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: visible;
  height: auto;
  max-height: initial;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form>
    <div>
      <div
        class="css-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="css-18ddxdy el3h3g92"
          name="test"
          type="text"
          value="test"
        />
      </div>
      <div
        class="css-2yjbay e5hc7t70"
      >
        <div
          class="css-xbtm7g el3h3g94"
        >
          This field should have a length greater than 13
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
